2009-11-20  Gery Kahn <gxkahn@gmail.com>

	* Makefile.in (miscfiles): Added `top-level.domains' to list.
	* top-level.domains, scripts/tld/parse_TLDs.sh: New files.
	* ORIGIN, README: Updated.

2006-11-07  Behdad Esfahbod <behdad@gnu.org>

	* na.phone: Fixed typo: `Coeur D'alene' -> `Coeur d'Alene'. (Eric
	Pement <eric.pement@moody.edu>)

	* unicode: Updated to 5.0.0.

2005-04-13  Behdad Esfahbod <behdad@gnu.org>

	* TODO: Renamed from `wishes'.

	* unicode-license: Renamed from `Unicode-License'.  Updated.

	* unicode: Updated to 4.1.0.

	* abbrevs.gen: Added `afaict', `ianal', `stfe', `wlog', and some
	punctuation changes.  Made `byob' and `booze' mutually recursive.

	* rfc-index.txt: Updated to 2005-04-12.

	* fyi-index.txt, std-index.txt, bcp-index.txt: Updated to 2005-03-30.

	* cities: Country codes for some entries added.  Changed `Beograd' to
	`Belgrade'.

	* inter.phone: Fixed typo: `oceana' -> `oceania'.

	* na.phone: Fixed typo: `Wheet Ridge' -> `Wheat Ridge'. (David Brown
	<gnu@davidb.org>)

	* ORIGIN: Updated to reflect changes above.  Added `unicode-license'.

	* README, Makefile, NEWS: Updated accordingly, set version to 1.5.

	* ANNOUNCE-1.5: Added.

	* ChangeLog: Capitalized previous messages by Roozbeh.

2004-12-11  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* airport: Added a few airports and corrected a few details based on
	information available on several website.

2004-12-09  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* airport: Added a few Iranian airports, fixed the name of
	Johannesburg airport.

2004-11-13  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* airport: Added lots of airports from the FAA list that could be
	verified against an airline timetable, fixed the name of some
	airports according to the English Wikipedia, fixed spelling of a few
	names based on The Oxford Guide to Style.

	* countries: Fixed spelling of Chișinău using the "comma below"
	form of "s".

	* README: Mentioned the spelling policy.
