@@ -1,0 +1,9 @@
+dictfiles = connectives web2 web2a propernames
+miscfiles = airport ascii birthtoken inter.phone na.phone operator	\
+abbrevs.talk abbrevs.gen cities.dat na.postalcodes GNU-manifesto	\
+mailinglists languages latin1 currency countries top-level.domains	\
+unicode
+rfcfiles = rfc-index.txt std-index.txt fyi-index.txt bcp-index.txt
+
+data_DATA = $(dictfiles) $(miscfiles) $(rfcfiles)
+EXTRA_DIST = $(data_DATA) dict-README ORIGIN unicode-license
