@@ -1,0 +1,6 @@
+AC_PREREQ(2.60)
+AC_INIT([GNU miscfiles], [1.5.90], [bug-miscfiles@gnu.org])
+AM_INIT_AUTOMAKE
+AC_PROG_INSTALL
+AC_CONFIG_FILES([Makefile])
+AC_OUTPUT
