@@ -1,4 +1,0 @@
-dnl Process this file with autoconf to produce a configure script
-AC_INIT(dict-README)
-AC_PROG_INSTALL
-AC_OUTPUT(Makefile)
